MDEV-29041 Redundant truncation warning on CAST(string_column AS DECIMAL)